// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders default 1`] = `
<Link
  disabled={false}
  linkStyle={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 9999,
        "height": 28,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 28,
      },
      null,
    ]
  }
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="1"
    strokeColour="#696969"
  />
</Link>
`;

exports[`2. renders selected 1`] = `
<Link
  disabled={false}
  linkStyle={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 9999,
        "height": 28,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 28,
      },
      null,
    ]
  }
>
  <IconStar
    fillColour="#006699"
    height={18}
    opacity="1"
    strokeColour="none"
  />
</Link>
`;

exports[`3. renders disabled 1`] = `
<Link
  disabled={true}
  linkStyle={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 9999,
        "height": 28,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 28,
      },
      null,
    ]
  }
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="0.4"
    strokeColour="#696969"
  />
</Link>
`;

exports[`4. renders default in dark theme 1`] = `
<Link
  disabled={false}
  linkStyle={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 9999,
        "height": 28,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 28,
      },
      null,
    ]
  }
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="1"
    strokeColour="#CCC"
  />
</Link>
`;

exports[`5. renders selected in dark theme 1`] = `
<Link
  disabled={false}
  linkStyle={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 9999,
        "height": 28,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 28,
      },
      null,
    ]
  }
>
  <IconStar
    fillColour="#3C81BE"
    height={18}
    opacity="1"
    strokeColour="none"
  />
</Link>
`;

exports[`6. renders disabled in dark theme 1`] = `
<Link
  disabled={true}
  linkStyle={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 9999,
        "height": 28,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 28,
      },
      null,
    ]
  }
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="0.4"
    strokeColour="#CCC"
  />
</Link>
`;
